# echolink

./: .gitignore  README.MD
applications/echoLinkService/: .gitignore  main.py  pyproject.toml  start.sh
applications/echoLinkService/core/api/: chatRoutes.py  configRoutes.py  micRoutes.py  runtimeRoutes.py  server.py  sttRoutes.py  vocabularyCacheRoutes.py  voiceTranslationRoutes.py
applications/echoLinkService/core/config/: localIpcBinding.py  serviceConfig.py
applications/echoLinkService/core/files/: chatFileSessions.py  localFileCache.py  runtimeState.py
applications/echoLinkService/core/stt/: awsTranscribeStream.py  sttTranscriptQuality.py
applications/echoLinkService/core/voiceTranslation/: eleven_labs_voice_display.py  elevenlabsPremadeCatalog.py  voiceTranslationPipeline.py
applications/echoLinkService/files/cache/chats/: 20260405T044121Z_01f2ce74ee98.json  20260405T045227Z_b85ecee33be8.json  20260405T045255Z_f6b9fdacb455.json  20260405T045920Z_d6addc9db118.json  20260405T045923Z_972dc160dbeb.json  20260405T050102Z_949224c2c130.json  20260405T054931Z_87db1d32f555.json  20260405T064805Z_f8a7e96e5356.json  20260405T064851Z_54b951e42d24.json  20260405T074005Z_5bff1a436e14.json  20260405T075122Z_6c10bcc3e130.json  20260406T001210Z_5dfe67588751.json  20260406T001311Z_a09b5ab99d56.json  20260406T001332Z_8a8ad6dee97b.json  20260406T002007Z_5a44b80ec61d.json  20260406T002306Z_75774a227005.json  20260406T002338Z_2cd839c1b000.json  20260406T002608Z_1299dc06fcdb.json  20260406T002618Z_9977b6f53cac.json  20260406T002702Z_fb54e0c23228.json  (+10 more)
mds/: resume.md  (+1 more)
(+68 files in other folders)
