[project]
name = "echo-link-service"
version = "0.1.0"
description = "EchoLink local audio pipeline and API service"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "vosk>=0.3.44",
  "boto3>=1.35.0",
  "amazon-transcribe>=0.6.0",
  "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*"]
